# sticker

./: README.txt  build.py  deploy.py  logo.py  logo.txt  main.spec  pyproject.toml  小抄.md
my_project/: main.py  pyproject.toml
my_project/my_project/: main.py
